# rpcs3-mobile

./: CMakeLists.txt
.github/workflows/: android.yml
